<resources>
    <string name="open_weather_api_key" translatable="false">ca8d1939be2fc1f8cc73a2e515d9ad1f</string>

    <string name="app_name">WeatherProject</string>
    <string name="enter_your_city">Enter your city</string>
    <string name="show_weather">Show weather</string>
    <string name="city">Your chosen city</string>
    <string name="temperature">Temperature %1$s</string>
    <string name="wind_speed">Wind speed %1$s</string>
    <string name="pressure">Pressure %1$s</string>
    <string name="humidity">Humidity %1$s</string>
    <string name="settings">Settings</string>
    <string name="weather_information">Weather information</string>
    <string name="choose_city">Choose a city</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sensors_info">Sensors info</string>
</resources>
