<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center|top"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherFragment">

    <TextView
        android:id="@+id/city_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:textSize="35sp"
        android:text="@string/city"/>
    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_info_portrait"
        android:layout_margin="@dimen/default_margin_portrait"
        android:text="@string/temperature"/>
    <TextView
        android:id="@+id/wind_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_info_portrait"
        android:layout_margin="@dimen/default_margin_portrait"
        android:text="@string/wind_speed"/>
    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_info_portrait"
        android:layout_margin="@dimen/default_margin_portrait"
        android:text="@string/pressure"/>
    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_info_portrait"
        android:layout_margin="@dimen/default_margin_portrait"
        android:text="@string/humidity"/>
</LinearLayout>